--- a/MNIST_DATASET_TRAINING.ipynb
+++ b/MNIST_DATASET_TRAINING.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPRXUxgExJLRvooEmXyKqNa",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/TheTharz/ann-code-example-lecture/blob/main/MNIST_DATASET_TRAINING.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
@@ -112,7 +124,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 69
         },
         "id": "IaANeOGdVwAN",
         "outputId": "d955b334-7ecb-4d69-d23d-372b6542bfab"
@@ -466,9 +478,171 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# prompt: divide train x and train y by 255\n",
+        "\n",
+        "X_train, X_test = X_train / 255.0, X_test / 255.0\n"
+      ],
       "metadata": {
         "id": "m9M3jF1FXVop"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#flattening is changing the 28*28 to 1*784 means making a 1d array from a multi d array\n",
+        "X_train_flattened = X_train.reshape(len(X_train),28*28)\n",
+        "\n",
+        "X_test_flattened = X_test.reshape(len(X_test),28*28)"
+      ],
+      "metadata": {
+        "id": "vby18IKkYZdD"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Y is just a simple number so we dont need to flatten it"
+      ],
+      "metadata": {
+        "id": "JDxqtdV4Zu77"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train_flattened.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yi8JcqgEZEhj",
+        "outputId": "9e395f96-0a38-428a-dd4d-96a3a390aafb"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(60000, 784)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_test_flattened.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I5jiZAsDZ2Bt",
+        "outputId": "82aab1dd-a9d2-4a41-f39d-8d618664bb5e"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10000, 784)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = keras.Sequential([\n",
+        "    keras.layers.Dense(10,input_shape=(784,),activation='sigmoid')\n",
+        "])\n",
+        "\n",
+        "model.compile(optimizer='adam',\n",
+        "              loss='sparse_categorical_crossentropy',\n",
+        "              metrics=['accuracy']\n",
+        "              )\n",
+        "\n",
+        "model.fit(X_train_flattened,y_train,epochs=5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C4_MYwJYZ947",
+        "outputId": "4214c62d-9029-4381-ca41-a21ff5f8e2a6"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.4675 - accuracy: 0.8777\n",
+            "Epoch 2/5\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.3032 - accuracy: 0.9160\n",
+            "Epoch 3/5\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2832 - accuracy: 0.9210\n",
+            "Epoch 4/5\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.2734 - accuracy: 0.9243\n",
+            "Epoch 5/5\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.2666 - accuracy: 0.9257\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x7d44a4ae53f0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_and_metrics = model.evaluate(X_test_flattened, y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WRp2KytuaAeW",
+        "outputId": "d53fad75-175d-4b1f-fe95-e606b90cbfd3"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 [==============================] - 2s 3ms/step - loss: 0.2703 - accuracy: 0.9231\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UN8JstNHc6sl"
       },
       "execution_count": null,
       "outputs": []
